--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a way to manipulate the text in the way you want"
+      content="TextUtils is a versatile text manipulation tool designed to empower users with a range of functionalities for flexible text processing. Tailored to meet your needs, TextUtils allows you to effortlessly modify and enhance text in various ways, making it a must-have tool for anyone working with textual data."
+
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-96x96.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -31,7 +32,7 @@
       crossorigin="anonymous"
     />
 
-    <title>TextUtils - TU </title>
+    <title>TextUtils</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
